--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       <a href="#videos">Videos</a>
     </nav>
 
-    <!--Venue Section-->
+    <!--Event Section-->
     <section id="event">
       <h2>📍 Event Details</h2>
       <div class="grid">
@@ -306,6 +306,14 @@
           <strong>Entry Fee:</strong> Absolutely Free
         </div>
       </div>
+      <br>
+      <div style="display: flex; justify-content: center;">
+        <h3 style="color: rgb(247, 118, 6);">Event Highlight</h3>
+      </div>
+      <div style="display: flex; justify-content: center;">
+        <img height="250" width="400" src="https://i.postimg.cc/mrrYsv2T/australia-event-offer.gif" alt="Free Couple Air Ticket">
+      </div>
+    </section>  
 
     <!-- Benefits Section -->
     <section id="benefits">
