Your commit message here

--- a/index.html
+++ b/index.html
@@ -273,15 +273,15 @@
       />
       <h1>Australia Education Fest 2025</h1>
       <p>Turn Your Study Abroad Dream Into Reality 🌏</p>
-      <a href="#apply" class="btn">Apply Now</a>
+      <a href="#apply" class="btn">Book Your Free Assessment</a>
       <a href="https://wa.me/8801939555222" target="_blank" class="btn"
-        >Book Free Consultation</a
+        >Whatsapp Now</a
       >
     </header>
 
     <!-- Navigation -->
     <nav>
-      <a href="#event">Event Details</a>  
+      <a href="#event">Event Details</a>
       <a href="#benefits">Benefits</a>
       <a href="#why">Why Choose Us</a>
       <a href="#apply">Apply</a>
@@ -296,24 +296,26 @@
         <div class="card">
           <strong>Date:</strong> 18th October 2025 (Saturday)
         </div>
+        <div class="card"><strong>Time:</strong> 10:00 AM - 5:00 PM</div>
         <div class="card">
-          <strong>Time:</strong> 10:00 AM - 5:00 PM
+          <strong>Venue:</strong> F5-B (Lift 5), House 411, Road 29, New DOHS,
+          Mohakhali, Dhaka-1206
         </div>
-        <div class="card">
-          <strong>Venue:</strong> F5-B (Lift 5), House 411, Road 29, New DOHS, Mohakhali, Dhaka-1206
-        </div>
-        <div class="card">
-          <strong>Entry Fee:</strong> Absolutely Free
-        </div>
+        <div class="card"><strong>Entry Fee:</strong> Absolutely Free</div>
       </div>
-      <br>
-      <div style="display: flex; justify-content: center;">
-        <h3 style="color: rgb(247, 118, 6);">Event Highlight</h3>
+      <br />
+      <div style="display: flex; justify-content: center">
+        <h3 style="color: rgb(247, 118, 6)">Event Highlight</h3>
       </div>
-      <div style="display: flex; justify-content: center;">
-        <img height="250" width="400" src="https://i.postimg.cc/mrrYsv2T/australia-event-offer.gif" alt="Free Couple Air Ticket">
+      <div style="display: flex; justify-content: center">
+        <img
+          height="250"
+          width="400"
+          src="https://i.postimg.cc/mrrYsv2T/australia-event-offer.gif"
+          alt="Free Couple Air Ticket"
+        />
       </div>
-    </section>  
+    </section>
 
     <!-- Benefits Section -->
     <section id="benefits">
@@ -364,7 +366,7 @@
       <div class="video-grid">
         <div class="video-card">
           <iframe
-            src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FDreambuzz.Education%2Fvideos%2F1044644840906818%2F&show_text=true&width=476&t=0"
+            src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FDreambuzz.Education%2Fvideos%2F334280823106675%2F&show_text=true&width=357&t=0"
             frameborder="0"
             allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
             allowfullscreen
@@ -373,7 +375,7 @@
         <div class="video-card">
           <div class="video-card">
             <iframe
-              src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FDreambuzz.Education%2Fvideos%2F1193496365838178%2F&show_text=true&width=476&t=0"
+              src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FDreambuzz.Education%2Fvideos%2F1945481549713336%2F&show_text=true&width=267&t=0"
               frameborder="0"
               allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
               allowfullscreen
@@ -382,7 +384,7 @@
         </div>
         <div class="video-card">
           <iframe
-            src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FDreambuzz.Education%2Fvideos%2F1262891748544693%2F&show_text=true&width=476&t=0"
+            src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FDreambuzz.Education%2Fvideos%2F1193496365838178%2F&show_text=true&width=476&t=0"
             frameborder="0"
             allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
             allowfullscreen
