--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
       <h2>📞 Apply Now & Get Free Consultation</h2>
       <div class="form-container">
         <!-- Replace FORM_ID with your actual Google Form ID -->
-        <iframe src="https://forms.gle/nTRnas35BMNB8erG7">Loading…</iframe>
+        <iframe src="https://forms.gle/nTRnas35BMNB8erG7">Loading.....</iframe>
       </div>
     </section>
 
