--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         src="https://dreambuzzbd.com/frontend/assets/images/logo.png"
         alt="Dreambuzz Education Logo"
       />
-      <h1>Australia Education Fest 2025</h1>
+      <h1>Australia Study Fest 2025</h1>
       <p>Turn Your Study Abroad Dream Into Reality 🌏</p>
       <a href="#apply" class="btn">Book Your Free Assessment</a>
       <a href="https://wa.me/8801939555222" target="_blank" class="btn"
