--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Australia Education Fest 2025 | Dreambuzz Education</title>
+    <title>Australia Study Fest 2025 | Dreambuzz Education</title>
     <!-- Favicon -->
     <link
       rel="icon"
