--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
       <h1>Australia Study Fest 2025</h1>
       <p>Turn Your Study Abroad Dream Into Reality 🌏</p>
       <a href="#apply" class="btn">Book Your Free Assessment</a>
-      <a href="https://wa.me/8801939555222" target="_blank" class="btn"
-        >Whatsapp Now</a
+      <a href="https://chat.whatsapp.com/IDughABdN1ZBjgtsp7LOye?mode=ems_copy_t" target="_blank" class="btn"
+        >Join Whatsapp Community</a
       >
     </header>
 
